<resources>
    <string name="app_name">Safe Carbs</string>
    <string name="Heigh_hint">Ingresa tu estatura (en mts)</string>
    <string name="gender_hint">Ingresa tu género</string>
    <string name="dateborn_hint">Ingresa tu fecha de nacimiento</string>
    <string name="surname_hint">Ingresa tu apellido</string>
    <string name="name_hint">Ingresa tu nombre</string>
    <string name="register_title">Registro</string>
    <string name="password_hint">Crea una contraseña</string>
    <string name="password_confirm_hint">Confirma tu contraseña</string>
    <string name="mail_hint">Ingresa tu correo</string>
    <string name="mail_confirm_hint">Confirma tu correo</string>
    <string name="weight_hint">Ingresa tu peso (en kg)</string>
</resources>
